--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "bar-foo-vue-starter",
-  "description": " ",
+  "description": "A Vue starter project based on webpack",
   "version": "0.0.1",
-  "author": "Anthon Holmqvist <anthon.kendel@gmail.com>",
   "license": "MIT",
-  "private": true,
   "scripts": {
     "serve": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.js",
     "build": "cross-env NODE_ENV=production webpack --config build/webpack.config.js"
